--- a/.project
+++ b/.project
@@ -26,5 +26,10 @@
 			<type>2</type>
 			<locationURI>AXL</locationURI>
 		</link>
+		<link>
+			<name>[source path] RSLoader</name>
+			<type>2</type>
+			<locationURI>RSLoader</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
