[0.2.4] legacy controller stripped out to separate class, bug fix: once main window closed and restored - drag and drop does not work anymore

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>PromoLoader</name>
 	<comment></comment>
 	<projects>
+		<project>RSLGen</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
