--- a/.project
+++ b/.project
@@ -23,6 +23,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>[source path] AXL</name>
+			<type>2</type>
+			<locationURI>AXL</locationURI>
+		</link>
+		<link>
 			<name>[source path] RSLoader</name>
 			<type>2</type>
 			<locationURI>RSLoader</locationURI>
